--- a/mysessions/templates/mysessions/session.html
+++ b/mysessions/templates/mysessions/session.html
@@ -5,7 +5,7 @@
   <title>Place searches</title>
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
   <meta charset="utf-8">
-  
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
@@ -16,56 +16,7 @@
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-
-
-
-  <script async defer type="text/javascript" src='{% static "javascript/srchplaces.js"%}'></script>
-
-  <script>
-
-  var timeDelta = {{ time_remaining }}; //in seconds
-  var d = new Date();
-  var loadTime = d.getTime()/1000; //time now in seconds
-  var endTime = loadTime + timeDelta; //end time in seconds 
-
-
-            
-  function myTimer(){
-    
-    var d2 = new Date();
-    var now = d2.getTime()/1000;
-    timeDelta = endTime - now;
-     //remaining time in seconds
-
-    if(timeDelta >= 0){
-      var hours = timeDelta/3600;
-      var minutes = (hours%1)*60;
-      var seconds = (minutes%1)*60;
-      var timeString = pad(Math.trunc(hours),2) + " : " + pad(Math.trunc(minutes),2) + " : "+ pad(Math.trunc(seconds),2);
-      document.getElementById("timer").innerHTML = timeString;
-    }else{
-      //block voteup/votedown buttons, block add buttons
-      //display Winner
-      document.getElementById("timer").innerHTML = "00 : 00 : 00";
-
-      clearInterval(setIntervalTimer);
-      getWinner();
-      }
-    }
-
-  function pad(num, size) {
-    var s = "000000000" + num;
-    return s.substr(s.length-size);
-}
-
-  var setIntervalTimer = setInterval(function(){ myTimer()}, 1000);
-
-
-</script>
- 
-  <script async defer type="text/javascript" src='{% static "javascript/jquery.js"%}'></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 <link rel="stylesheet" href="{% static 'style/mystyle.css' %}">
 
@@ -73,8 +24,8 @@
       /* Always set the map height explicitly to define the size of the div
       * element that contains the map. */
       #map {
-        height: 1200px;
-        width:760px;
+        height: 900px;
+        width:700px;
         margin:5px;
         border: solid #e2610a;
       }
@@ -87,7 +38,7 @@
 
 
       #mapModal{
-        height: 400px;
+        height:400px;
         width:600px;
       }
       </style>
@@ -98,9 +49,10 @@
     </head>
     <a href='/sessions/'><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>&nbsp;back to list</a>
     <p class='session-title'>{{ session_descr }}</p>
-        <div class='row'>
-        <div id='main-container'>
-                <div class='row'>
+
+  <div id='main-container'>
+    <!--timer-->
+      <div class='row'>
           <div class='col-xs-4'> </div>
           <div class='col-xs-4' id='timer-box'>
              <h2 id ='timer' class='timer'>00 : 00 : 00</h2>
@@ -108,7 +60,9 @@
           <div class='col-xs-4'> </div>
       </div>
        
-        <div class='col-md-6' id='left-boxes'>
+      <div class='row'> 
+        <div class='col-md-1'></div>
+        <div class='col-md-5' id='left-boxes'>
 
           <div id='containerSelectedPlaces' class='row'>
              <div id='voteHere-box'> <h1 id='voteHere-text'> - VOTE HERE - </h1> </div>
@@ -131,16 +85,18 @@
                 <ul id='srchResultsList'></ul>
               </form>
             </div>
+            
+            <div id ='winner-reviews'></div> 
           </div>
 
         </div>
-
-            <div id='map-container' class='col-md-6'>
-              <div id='map'></div>
-            </div>
+        <div class='col-md-1 middle'> </div>
+        <div id='map-container' class='col-md-5'>
+            <div id='map'></div>
+        </div>
+       <!-- <div class='col-md-1'></div> -->
       </div>
     </div>
-  </div>
 
 
     <!-- Modal -->
@@ -174,12 +130,66 @@
       </div>
 
   </div>
+  <script async defer>
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwqnVFsADdJoWol_2AFBWQKT_ZFmUKvmg&libraries=places&callback=initMap" async defer></script>
+  var timeDelta ={{ time_remaining }}; //in seconds
+  var d = new Date();
+  var loadTime = d.getTime()/1000; //time now in seconds
+  var endTime = loadTime + timeDelta; //end time in seconds 
+
+
+            
+  function myTimer(){
+    
+    var d2 = new Date();
+    var now = d2.getTime()/1000;
+    timeDelta = endTime - now;
+     //remaining time in seconds
+
+    if(timeDelta >= 0){
+      var hours = timeDelta/3600;
+      var minutes = (hours%1)*60;
+      var seconds = (minutes%1)*60;
+      var timeString = pad(Math.trunc(hours),2) + " : " + pad(Math.trunc(minutes),2) + " : "+ pad(Math.trunc(seconds),2);
+      document.getElementById("timer").innerHTML = timeString;
+    }else{
+
+      document.getElementById("timer").innerHTML = "00 : 00 : 00";
+
+      clearInterval(setIntervalTimer);
+     // getWinner();
+      }
+    }
+
+  function pad(num, size) {
+    var s = "000000000" + num;
+    return s.substr(s.length-size);
+}
+
+  var setIntervalTimer = setInterval(function(){ myTimer()}, 1000);
+
+</script>
 
 
 
+<script>
+$( document ).ready(function() {
+    $.getScript("https://maps.googleapis.com/maps/api/js?key=AIzaSyBwqnVFsADdJoWol_2AFBWQKT_ZFmUKvmg&libraries=places&callback=initMap", function(){
+ });
+    $.getScript('{% static "javascript/srchplaces.js"%}', function(){
+ });    
 
+});
+
+</script>
+
+ 
+
+ 
+
+
+
+<script async defer type="text/javascript" src='{% static "javascript/jquery.js"%}'></script>
 
   </html>
   {% endblock %}
